syntax = "proto3";

package io.products.channelProduct.api;

option java_outer_classname = "ChannelProductApi";

// import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "kalix/annotations.proto";
// import "io/products/channel_product/domain/channel_product_domain.proto";

service ChannelProductService {
    option (kalix.codegen) = {
      value_entity: {
        name: "io.products.channelProduct.domain.ChannelProduct"
        entity_type: "channel_products"
        state: "io.products.channelProduct.domain.ChannelProductState"
      }
    };
  
    rpc CreateChannelProduct(ChannelProduct) returns (google.protobuf.Empty);
    
    // rpc GetChannelProduct(GetChannelProductRequest) returns (ChannelProduct);

    // rpc UpdateChannelProduct(ChannelProduct) returns (google.protobuf.Empty);

    // rpc DeleteChannelProduct(DeleteChannelProductRequest) returns (google.protobuf.Empty);

}

message ChannelProduct {
    string id = 1 [(kalix.field).entity_key = true];
    string product_id = 2;
    string channel_id = 3;

    repeated ChannelProductAttribute channel_product_attribute = 4;
    repeated ChannelProductVariantGroup channel_product_variant_group = 5;
    repeated ChannelProductOptionGroup channel_product_option_group = 6;
}

message GetChannelProductRequest {
    string email = 1 [(kalix.field).entity_key = true];
}
message DeleteChannelProductRequest {
    string email = 1 [(kalix.field).entity_key = true];
}

message ChannelProductAttribute {
  string attr_id = 1 [(kalix.field).entity_key = true];
  string chnl_attr_name = 2;
  string chnl_attr_type = 3;
  string value = 4;
  bool is_common = 5;
  
}


message ChannelProductVariantGroup {
  repeated ChannelProductVariant channel_product_variant = 1;
}


message ChannelProductVariant {
  string vrnt_id = 1 [(kalix.field).entity_key = true];
  string chnl_vrnt_name = 2;
  string chnl_vrnt_type = 3;
  string value = 4;
}


message ChannelProductOptionGroup {
  repeated ChannelProductOption channel_product_option = 1;
}


message ChannelProductOption {
  string optn_id = 1 [(kalix.field).entity_key = true];
  string chnl_optn_name = 2;
  string chnl_optn_type = 3;
  string value = 4;
}